--- a/library.properties
+++ b/library.properties
@@ -5,4 +5,5 @@ maintainer=Takehiko Shimojima <staff@ambidata.io>
 sentence=BME280 library with SPI interface.
 paragraph=It provides begin(), readTemperature(), readHumidity(), readPressure().
 category=Sensors
+url=http://ambidata.io
 architectures=*
